--- a/blog.html
+++ b/blog.html
@@ -104,7 +104,7 @@ Watch a funny movie. Laugh. Laugh. Laugh!  It really IS the best medicine. You c
             <div class="cards">
                 <div class="cards-image">
                     <a href="#">
-                        <img src="a.jpg" alt="Card Image">
+                        <img src="img/blog1.jpg" alt="Card Image">
                     </a>
                 </div>
 
