--- a/index.html
+++ b/index.html
@@ -84,25 +84,25 @@
     <div class="carousel-item active">
       <img src="img/slide4.jpg" class="d-block w-100" alt="4th Slide">
       	<div class="carousel-caption">
-      		<h5>Donate & Help Save a Life</h5>
+      		<h5>Let's fight Corona. In this Together!!</h5>
       	</div>
     </div>
     <div class="carousel-item">
       <img src="img/slide2.jpg" class="d-block w-100" alt="1st Slide">
       	<div class="carousel-caption">
-      		<h5>Feed the Poor To Help Them Survive</h5>
+      		<h5>Donate and help the needy</h5>
       	</div>
     </div>
     <div class="carousel-item img">
       <img src="img/slide3.jpg" class="d-block w-100" alt="2nd Slide">
       	<div class="carousel-caption">
-      		<h5>Save Humanity To Help Them Survive</h5>
+      		<h5>Nobody can do everything, but everyone can do something.</h5>
       	</div>
     </div>
     <div class="carousel-item img">
       <img src="img/slide 4.jpg" class="d-block w-100" alt="3rd Slide">
       	<div class="carousel-caption">
-      		<h5>Donate & Help To Give Them a Life</h5>
+      		<h5>Act as if what you do makes a difference. It does.</h5>
       	</div>
     </div>
   </div>
