--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
           <a class="dropdown-item" href="dronedelivery.html">Door to Door Drone Grocery Delivery</a>
           <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
           <a class="dropdown-item" href="blog.html">Sharing Experiences With The World</a>
-          <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
+          <a class="dropdown-item" href="feeling.html">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="index.html#contact">Contact Us</a>
