--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
         <a class="nav-link" href="#contact">Contact Us</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    
   </div>
 </nav>
 </section>
@@ -234,7 +231,7 @@
             <img src="img/donate.png" alt="images">
         </div>
         <div class="details">
-            <h2>Donate for Change<br>
+           <a href="donate.html"> <h2>Donate for Change<br><\a>
         </div>
       </div>
     
@@ -281,9 +278,9 @@
 			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
 		</ul>
 	</div>
-		<h2>Name</h2>
-		<h3>Designation</h3>
-		<p>bla blah blah blah blah blah</p>
+		<h2>Aastha </h2>
+		<h3>Frontend Developer</h3>
+		<p>Currently pursuing Btech (IT) from MAIT.</p>
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
@@ -294,9 +291,9 @@
 			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
 		</ul>
 	</div>
-		<h2>Name</h2>
-		<h3>Designation</h3>
-		<p>bla blah blah blah blah blah</p>
+		<h2>Mansi Sharma</h2>
+		<h3>Frontend Developer</h3>
+		<p>Currently pursuing Btech (Comp.Science) from IGDTUW.</p>
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
@@ -307,9 +304,9 @@
 			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
 		</ul>
 	</div>
-		<h2>Name</h2>
-		<h3>Designation</h3>
-		<p>bla blah blah blah blah blah</p>
+		<h2>Shrishti Goyal</h2>
+		<h3>Frontend Developer</h3>
+		<p>Currently pursuing Btech (Comp.Science) from IGDTUW.</p>
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
@@ -320,9 +317,9 @@
 			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
 		</ul>
 	</div>
-		<h2>Name</h2>
-		<h3>Designation</h3>
-		<p>bla blah blah blah blah blah</p>
+		<h2>Shagun Yadav</h2>
+		<h3>Content Writer/Developer</h3>
+		<p>Currently pursuing Btech (Comp.Science) from IGDTUW.</p>
 	</div>
 	</div>
 </div>
