--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <img src="img/donate.png" alt="images">
         </div>
         <div class="details">
-           <a href="donate.html"> <h2>Donate for Change<br><\a>
+            <h2>Donate for Change<br>
         </div>
       </div>
     
