--- a/index.html
+++ b/index.html
@@ -228,7 +228,10 @@
   <div class="box">
       <div class="card">
         <div class="imgBx">
-            <img src="img/donate.png" alt="images">
+		<a href="donate.html">
+			<img src="img/donate.png" alt="images">
+		</a>
+            
         </div>
         <div class="details">
             <h2>Donate for Change<br>
