--- a/hero.html
+++ b/hero.html
@@ -93,6 +93,7 @@
       <aside id="sidebar">
         <h3>Sidebar Heading</h3>
         <p>Sidebar 1</p>
+        <a href="hero2.html"><h3>HERO DAY 2<h3></a>
       </aside>
     </div>
 
