--- a/hero.html
+++ b/hero.html
@@ -91,9 +91,11 @@
       </section>
 
       <aside id="sidebar">
-        <h3>Sidebar Heading</h3>
-        <p>Sidebar 1</p>
-        <a href="hero2.html"><h3>HERO DAY 2<h3></a>
+        <h3>Hero Of The Day</h3>
+        <a href="hero1.html"><h3 style="color.white">HERO OF DAY 1<h3></a>
+        <a href="hero2.html"><h3 style="color.white">HERO OF DAY 2<h3></a
+        <a href="hero3.html"><h3 style="color.white">HERO OF DAY 3<h3></a>  
+         <a href="hero4.html"><h3 style="color.white">HERO OF DAY 4<h3></a> 
       </aside>
     </div>
 
