--- a/hero.html
+++ b/hero.html
@@ -92,8 +92,8 @@
 
       <aside id="sidebar">
         <h3>Hero Of The Day</h3>
-        <a href="hero.html"><h4 style="color.white">HERO OF DAY 1<h4></a>
-        <a href="hero2.html"><h4 style="color.white">HERO OF DAY 2<h4></a
+        <a href="hero.html" style="color.white"><h4>HERO OF DAY 1<h4></a>
+          <a href="hero2.html"><h4 style="color.white">HERO OF DAY 2<h4></a>
         <a href="hero3.html"><h4 style="color.white">HERO OF DAY 3<h4></a>  
          <a href="hero4.html"><h4 style="color.white">HERO OF DAY 4<h4></a> 
       </aside>
