--- a/hero3.html
+++ b/hero3.html
@@ -75,7 +75,7 @@
 <!----blog---->
   <main>
 
-    <h2 class="page-heading">Hero of the Day No. 1</h2>
+    <h2 class="page-heading">Hero of the Day No. 3</h2>
     <div id="post-container">
       <section id="blogpost">
         <div class="cards">
@@ -91,8 +91,11 @@
       </section>
 
       <aside id="sidebar">
-        <h3>Sidebar Heading</h3>
-        <p>Sidebar 1</p>
+       <h3>Hero Of The Day</h3>
+        <a href="hero.html" style="color.white"><h4>HERO OF DAY NO.1<h4></a>
+          <a href="hero2.html"><h4 style="color.white">HERO OF DAY NO.2<h4></a>
+        <a href="hero3.html"><h4 style="color.white">HERO OF DAY NO.3<h4></a>  
+         <a href="hero4.html"><h4 style="color.white">HERO OF DAY NO.4<h4></a> 
       </aside>
     </div>
 
