--- a/hero2.html
+++ b/hero2.html
@@ -80,7 +80,7 @@
       <section id="blogpost">
         <div class="cards">
           <div class="cards-image size">
-            <img src="img/1.jpg" alt="Card Image">
+            <img src="img/shakeyra-stewart.jpg" alt="Card Image">
           </div>
           <div class="cards-description description">
             <h3 align="center">The Introduction</h3>
