--- a/hero.html
+++ b/hero.html
@@ -91,11 +91,11 @@
       </section>
 
       <aside id="sidebar">
-        <h3>Hero Of The Day</h3>
-        <a href="hero.html" style="color.white"><h4>HERO OF DAY NO.1<h4></a>
-          <a href="hero2.html"><h4 style="color.white">HERO OF DAY NO.2<h4></a>
-        <a href="hero3.html"><h4 style="color.white">HERO OF DAY NO.3<h4></a>  
-         <a href="hero4.html"><h4 style="color.white">HERO OF DAY NO.4<h4></a> 
+        <h3>HERO OF THE DAY</h3>
+        <a href="hero.html" style="color.white"><h6>Hospital janitor finds joy in protecting staff<h6></a>
+          <a href="hero2.html"><h6 style="color.white">She’s not hanging up her apron just yet<h6></a>
+        <a href="hero3.html"><h6 style="color.white">HERO OF DAY NO.3<h6></a>  
+         <a href="hero4.html"><h6 style="color.white">HERO OF DAY NO.4<h6></a> 
       </aside>
     </div>
 
