--- a/hero.html
+++ b/hero.html
@@ -75,7 +75,7 @@
 <!----blog---->
   <main>
 
-    <h2 class="page-heading">Hero of the Day No. 1</h2>
+    <h2 class="page-heading">Hospital janitor finds joy in protecting staff</h2>
     <div id="post-container">
       <section id="blogpost">
         <div class="cards">
@@ -94,8 +94,8 @@
         <h3>HERO OF THE DAY</h3>
         <a href="hero.html" style="color.white"><h6>Hospital janitor finds joy in protecting staff<h6></a>
           <a href="hero2.html"><h6 style="color.white">She’s not hanging up her apron just yet<h6></a>
-        <a href="hero3.html"><h6 style="color.white">HERO OF DAY NO.3<h6></a>  
-         <a href="hero4.html"><h6 style="color.white">HERO OF DAY NO.4<h6></a> 
+        <a href="hero3.html"><h6 style="color.white">Hero of Day No.3<h6></a>  
+         <a href="hero4.html"><h6 style="color.white">Hero of Day No.4<h6></a> 
       </aside>
     </div>
 
