--- a/hero2.html
+++ b/hero2.html
@@ -75,7 +75,7 @@
 <!----blog---->
   <main>
 
-    <h2 class="page-heading">Hero of the Day No. 2</h2>
+    <h2 class="page-heading">She’s not hanging up her apron just yet</h2>
     <div id="post-container">
       <section id="blogpost">
         <div class="cards">
@@ -84,18 +84,26 @@
           </div>
           <div class="cards-description description">
             <h3 align="center">The Introduction</h3>
-            The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens. Lockdowns are seen as the only possible and reliable means of protection and the reduction of further outbreak of the virus. These lockdowns, imposed in various countries and cities of the world have led to the unemployment and unforeseen disturbances in the lives of people. While the economically and financially stable part of the population is somehow coping with the sudden halt in their own ways, the livelihood of the poor, unemployed and the needy is jeopardized. The main concern of the governments all around the globe is to somehow provide for these people by introducing various fundraising schemes, providing basic facilities like shelter and food, proper medical testing and treatment for the Covid positive patients.Our aim behind building this website was to provide an online platform where the citizens can contribute their part in this fight against this global crisis. We believe that by collective support, motivation and contribution we can collect funds for the betterment of our society in these highly testing times. Our page aims at bringing together people so that they can interact, form ideas and share their stories with each other.
+            <p>She’s not hanging up her apron just yet.</p><p>Brooklyn waitress Shakeyra Stewart has made feeding New Yorkers her full-time job — even after the diner where she worked was forced to stop serving amid the coronavirus outbreak.</p><p>“It’s not like I’m busy — I’m unemployed,” said Stewart, 27, who spends nearly every weekday delivering groceries, shopping for home-bound neighbors or packing food at the Golden Harvest Food Pantry in Bedford-Stuyvesant, where she lives. </p><p>“Since I couldn’t donate cash, I could donate my time. So that’s what I did.”</p><p>Stewart lost her job at the Square Diner in Tribeca when Gov. Andrew Cuomo ordered a state-wide shutdown of eat-in restaurants, then grappled with what to do with her time.</p><p>She wanted to volunteer but was concerned that being out and about could contribute to the spread of the virus. Ultimately, she decided to give back “was the right thing to do,” so she put on a mask and gloves and headed out to help. </p><p>The out-of-work server found the volunteer gig at Golden Harvest through a neighborhood online support group, where nonprofit In It Together was looking for help amid a dire volunteer shortage.</p><p>“Helping feels good. Like there’s meaning to your life. I’m doing okay, but I can see the other people around me [are struggling],” Stewart said. “I can’t imagine why you wouldn’t [help]. If you don’t have anything else to do, why wouldn’t you?”</p><p>While she’s out delivering the grub, appreciative Brooklynites still stop her to chat — from a safe distance, of course. 
+
+“People have been so grateful and so lovely. One woman tried to hug me,” she said. “The impact feels more real because I know these people, they’re right there. It’s harder to deny or ignore.”
+
+Stewart says she plans to keep volunteering at the pantry — even when she’s back at work and the pandemic is over. 
+
+“Before I discovered this, it was starting to get really depressing and stressful,” Stewart admitted. 
+
+“It still is, but after seeing so many people willing and wanting to help and be there for each other, it has restored my hope in humanity.”</p>  
           </div>
         </div>
 
       </section>
 
       <aside id="sidebar">
-        <h3>Hero Of The Day</h3>
-        <a href="hero.html" style="color.white"><h4>HERO OF DAY NO.1<h4></a>
-          <a href="hero2.html"><h4 style="color.white">HERO OF DAY NO.2<h4></a>
-        <a href="hero3.html"><h4 style="color.white">HERO OF DAY NO.3<h4></a>  
-         <a href="hero4.html"><h4 style="color.white">HERO OF DAY NO.4<h4></a> 
+        <h3>HERO OF THE DAY</h3>
+        <a href="hero.html" style="color.white"><h6>Hospital janitor finds joy in protecting staff<h6></a>
+          <a href="hero2.html"><h6 style="color.white">She’s not hanging up her apron just yet<h6></a>
+        <a href="hero3.html"><h6 style="color.white">Hero of Day No.3<h6></a>  
+         <a href="hero4.html"><h6 style="color.white">Hero of Day No.4<h6></a> 
       </aside>
     </div>
 
