--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="dronedelivery.html">Door to Door Drone Grocery Delivery</a>
-          <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
-          <a class="dropdown-item" href="blog.html">Sharing Experiences With The World</a>
-          <a class="dropdown-item" href="feeling.html">Gift a Feeling To The People At Risk</a>
+          <a class="dropdown-item" href="dronedelivery.html">Door to Door Drone <br/>Grocery Delivery</a>
+          <a class="dropdown-item" href="hero.html">Salute to the Heros <br/>of the Day</a>
+          <a class="dropdown-item" href="blog.html">Sharing Experiences <br/>With The World</a>
+	  <a class="dropdown-item" href="feeling.html">Gift a Feeling To <br/>The People At Risk</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#contact">Contact Us</a>
