--- a/blog.html
+++ b/blog.html
@@ -125,14 +125,14 @@ Watch a funny movie. Laugh. Laugh. Laugh!  It really IS the best medicine. You c
 	
 	<main>
     <section class="container">
-    <h2 class="section-heading">Fun Blogs</h2>
+
 	<div class="row">
 	<div class="col-md-6">
         <section>
             <div class="cards">
                 <div class="cards-image">
                     <a href="#">
-                        <img src="img/poetry.PNG" alt="Card Image">
+                        <img src="img/poem.PNG" alt="Card Image">
                     </a>
                 </div>
 
@@ -154,7 +154,7 @@ Watch a funny movie. Laugh. Laugh. Laugh!  It really IS the best medicine. You c
             <div class="cards">
                 <div class="cards-image">
                     <a href="#">
-                        <img src="img/poetry.PNG" alt="Card Image">
+                        <img src="img/painting.PNG" alt="Card Image">
                     </a>
                 </div>
 
