--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#services" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -371,5 +371,11 @@
     </div>
   </div>
 </section>
+	       <!------footer ended----->
+	       <script src="scroll.js"></script>
+	       <script>
+		       var scroll=new SmoothScroll('a[href*="#"]');
+		       </script>
+	      
 </body>
 </html>
