--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 	</div>
 		<h2>Mansi Sharma</h2>
 		<h3>Frontend Developer</h3>
-		<p>Currently pursuing Btech (Comp.Science) from IGDTUW.</p>
+		<p>Currently pursuing B.Tech (Computer Science) from IGDTUW.</p>
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
@@ -304,7 +304,7 @@
 	</div>
 		<h2>Shrishti Goyal</h2>
 		<h3>Frontend Developer</h3>
-		<p>Currently pursuing Btech (Comp.Science) from IGDTUW.</p>
+		<p>Currently pursuing B.Tech (Computer Science) from IGDTUW.</p>
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
@@ -317,7 +317,7 @@
 	</div>
 		<h2>Aastha </h2>
 		<h3>Frontend Developer</h3>
-		<p>Currently pursuing Btech (IT) from MAIT.</p>
+		<p>Currently pursuing B.Tech (IT) from MAIT.</p>
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
@@ -330,7 +330,7 @@
 	</div>
 		<h2>Shagun Yadav</h2>
 		<h3>Content Writer/Developer</h3>
-		<p>Currently pursuing Btech (Comp.Science) from IGDTUW.</p>
+		<p>Currently pursuing B.Tech (Computer Science) from IGDTUW.</p>
 	</div>
 	</div>
 </div>
