--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
             <div class="col-md-6">
             <div class="cards">
                 <div class="cards-image">
-                    <a href="#">
+                    <a href="feeling.html">
                         <img src="img/gift.jpg" alt="Card Image">
                     </a>
                 </div>
 
                 <div class="cards-description font">
-                    <a href="#">
+                    <a href="feeling.html">
                         <h3>Gift a Feeling To The People At Risk</h3>
                     </a>
                     <p>
                         Not only has Covid-19 impacted our daily lives and brought a halt, it also has impacted our mental health adversely. We find ourselves surrounded by a constant fear and uncertainty. The people who are tested positive, quarantined and the people who are working closely in these places have to go through a very difficult time and still have to work in these conditions. 
                     </p>
-                    <a href="#" class="btn-readmore">Read more</a>
+                    <a href="feeling.html" class="btn-readmore">Read more</a>
                 </div>
             </div>
         </div>
