--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#home">Home </a>
+        <a class="nav-link" href="#Slider">Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://station.ch/en/just-smile">Just Smile</a>
