--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
     <div class="carousel-item active">
       <img src="img/slide4.jpg" class="d-block w-100" alt="4th Slide">
       	<div class="carousel-caption">
-      		<h5>Let's fight Corona. In this Together!!</h5>
+      		<h5>Let's fight Corona.<br/> In this<br/> Together!!</h5>
       	</div>
     </div>
     <div class="carousel-item">
       <img src="img/slide2.jpg" class="d-block w-100" alt="1st Slide">
       	<div class="carousel-caption">
-      		<h5>Donate and help the needy</h5>
+      		<h5>Donate &<br/> help the needy</h5>
       	</div>
     </div>
     <div class="carousel-item img">
       <img src="img/slide3.jpg" class="d-block w-100" alt="2nd Slide">
       	<div class="carousel-caption">
-      		<h5>Nobody can do everything, but everyone can do something.</h5>
+      		<h5>Nobody<br/> can do everything,<br/> but everyone<br/> can do something.</h5>
       	</div>
     </div>
     <div class="carousel-item img">
       <img src="img/slide 4.jpg" class="d-block w-100" alt="3rd Slide">
       	<div class="carousel-caption">
-      		<h5>Act as if what you do makes a difference. It does.</h5>
+      		<h5>Act as if what you do<br/> makes a difference.<br/> It does.</h5>
       	</div>
     </div>
   </div>
