--- a/health.html
+++ b/health.html
@@ -17,6 +17,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="page.css">
+  <link rel="stylesheet" href="style.css">
 
   <title>health</title>
 </head>
