--- a/hero3.html
+++ b/hero3.html
@@ -75,16 +75,19 @@
 <!----blog---->
   <main>
 
-    <h2 class="page-heading">Hero of the Day No. 3</h2>
+    <h2 class="page-heading">From handling Trauma Victims to COVID-19 patients, This man has carried them all</h2>
     <div id="post-container">
       <section id="blogpost">
         <div class="cards">
           <div class="cards-image size">
-            <img src="img/1.jpg" alt="Card Image">
+            <img src="img/hero3.jpg" alt="Card Image">
           </div>
           <div class="cards-description description">
-            <h3 align="center">The Introduction</h3>
-            The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens. Lockdowns are seen as the only possible and reliable means of protection and the reduction of further outbreak of the virus. These lockdowns, imposed in various countries and cities of the world have led to the unemployment and unforeseen disturbances in the lives of people. While the economically and financially stable part of the population is somehow coping with the sudden halt in their own ways, the livelihood of the poor, unemployed and the needy is jeopardized. The main concern of the governments all around the globe is to somehow provide for these people by introducing various fundraising schemes, providing basic facilities like shelter and food, proper medical testing and treatment for the Covid positive patients.Our aim behind building this website was to provide an online platform where the citizens can contribute their part in this fight against this global crisis. We believe that by collective support, motivation and contribution we can collect funds for the betterment of our society in these highly testing times. Our page aims at bringing together people so that they can interact, form ideas and share their stories with each other.
+            <h3 align="center">Abdul Rehman</h3>
+            <p>Abdul Rehman is stationed outside the Jaipur airport, waiting for suspected patients who have to be taken to the hospital. For him, the call of duty is paramount.</p>
+            <p>In hindsight, her response was entirely und¬erstandable. “You must not go there; tell your employers to put you on duty elsewhere,” cried Abdul Rehman’s wife when she heard that her husband has been dep¬loyed to ferry suspected coronavirus patients from the airport to the hospital. Rehman, 33, soothed her nerves and assured her there was no reason to worry. It’s not that the amb¬ulance technician was upbeat about the task himself. He had his own apprehensions but the call of duty was paramount.Before the outbreak of coronavirus, Rehman would spend his days carrying mostly accident victims to hospitals. Giving first aid to victims, checking vitals such as pulse and blood pressure, and drawing up patient-care reports is what the emergency medical technician’s usual day involved. The ambulance service, known as 108 in common parlance, after the emergency number, he is part of is coordinated from a centralised call centre in the district.</p>
+            <p>For over a fortnight now, Rehman is stationed outside the airport, waiting for suspected patients who have to be taken to the hospital. Doctors have trained him in the protocol to be observed with suspected patients of coronavirus. The medical team at the airport informs him as soon as they identify a suspected passenger.While the passenger is brought to the ambulance, Rehman wears protective gear and covers the ambulance bed with a sheet. No contact and a one-metre distance to be maintained at all times—the ins¬tructions are abundantly clear. On the way, he asks patients their medical history and notes down symptoms. After dropping the suspected patient to the hospital’s isolation ward, the ambulance is sent for fumigation. After fumigation, it is shut for four-five hours. Rehman, meanwhile, discards the kit and bathes at the ambulance yard, which has rooms and toilet facilities for drivers and technicians.</p>
+            <p>The first time he took a bath after ferrying a suspected patient he rubbed himself profusely, he laughs. “I was very hesitant the first time I took a suspected patient to the hospital. I feared getting infected,” says Rehman, a father of two. The doctors, however, assured him that if he wore the safety kit properly, there was nothing to fear. That, and more trips, helped put his fears to rest. “One feels good too. If not anything else, I am doing this for my country,” he says with quiet resolve.</p>
           </div>
         </div>
 
@@ -92,9 +95,9 @@
 
       <aside id="sidebar">
        <h3>Hero Of The Day</h3>
-        <a href="hero.html" style="color.white"><h4>HERO OF DAY NO.1<h4></a>
-          <a href="hero2.html"><h4 style="color.white">HERO OF DAY NO.2<h4></a>
-        <a href="hero3.html"><h4 style="color.white">HERO OF DAY NO.3<h4></a>  
+        <a href="hero.html" style="color.white"><h4>Hospital janitor finds joy in protecting staff<h4></a>
+          <a href="hero2.html"><h4 style="color.white">She’s not hanging up her apron just yet<h4></a>
+        <a href="hero3.html"><h4 style="color.white">From handling Trauma Victims to COVID-19 patients, This man has carried them all<h4></a>  
          <a href="hero4.html"><h4 style="color.white">HERO OF DAY NO.4<h4></a> 
       </aside>
     </div>
