--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
 		</ul>
 	</div>
-		<h2>Aastha </h2>
+		<h2>Aastha Aggarwal</h2>
 		<h3>Frontend Developer</h3>
 		<p>Currently pursuing B.Tech (IT) from MAIT.</p>
 	</div>
