--- a/hero2.html
+++ b/hero2.html
@@ -102,7 +102,7 @@ Stewart says she plans to keep volunteering at the pantry — even when she’s 
         <h3>HERO OF THE DAY</h3>
         <a href="hero.html" style="color.white"><h6>Hospital janitor finds joy in protecting staff<h6></a>
           <a href="hero2.html"><h6 style="color.white">She’s not hanging up her apron just yet<h6></a>
-        <a href="hero3.html"><h6 style="color.white">Hero of Day No.3<h6></a>  
+        <a href="hero3.html"><h6 style="color.white">From handling Trauma Victims to COVID-19 patients, This man has carried them all<h6></a>  
          <a href="hero4.html"><h6 style="color.white">Hero of Day No.4<h6></a> 
       </aside>
     </div>
