--- a/hero3.html
+++ b/hero3.html
@@ -80,7 +80,7 @@
       <section id="blogpost">
         <div class="cards">
           <div class="cards-image size">
-            <img src="img/hero3.png" alt="Card Image">
+            <img src="img/hero3.jpg" alt="Card Image">
           </div>
           <div class="cards-description description">
             <h3 align="center">Abdul Rehman</h3>
